--- a/VueFolder/enjoy-project/package.json
+++ b/VueFolder/enjoy-project/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.1",
     "bootstrap": "^5.2.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
