--- a/VueFolder/enjoy-project/package.json
+++ b/VueFolder/enjoy-project/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^40.0.0",
+    "@ckeditor/ckeditor5-vue": "^5.1.0",
     "axios": "^1.6.1",
     "bootstrap": "^5.2.3",
     "vue": "^3.3.4",
