--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,14 @@ logging.level.com.mycom.enjoytrip.dao.BoardDao=debug
 logging.file.name=log/app.log
 logging.logback.rollingpolicy.max-file-size=1MB
 logging.logback.rollingpolicy.file-name-pattern=${LOG_FILE}.%d{yyyy-MM-dd}-%i.log
+
+# preffered json converter
+spring.mvc.converters.preferred-json-mapper=gson
+
+# file upload
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=200MB
+
+# app dependent configuration
+#app.fileupload.uploadPath=C:\\Users\\SSAFY\\Desktop\\SF_spring\\SpringBootLecture\\BoardFileUploadBootMybatisVue\\src\\main\\resources\\static
+#app.fileupload.uploadDir=upload
