--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 # datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/enjoytrip?serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/enjoytrip?serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=12341234
+spring.datasource.password=1234
 
 # mybatis
 mybatis.config-location=classpath:/config/mybatis-config.xml
