--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,6 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=200MB
 
 # app dependent configuration
-#app.fileupload.uploadPath=C:\\Users\\SSAFY\\Desktop\\SF_spring\\SpringBootLecture\\BoardFileUploadBootMybatisVue\\src\\main\\resources\\static
-#app.fileupload.uploadDir=upload
+
+app.fileupload.uploadPath=C:\\Users\\SSAFY\\Desktop\\repository\\ssafy_enjoytrip_team9\\src\\main\\resources\\static
+app.fileupload.uploadFolder=upload
