--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ mybatis.config-location=classpath:/config/mybatis-config.xml
 
 # logging
 logging.level.root=info
-logging.level.com.mycom.enjoytrip.dao.BoardDao=debug
+logging.level.com.mycom.enjoytrip.board.dao.*=debug
 logging.file.name=log/app.log
 logging.logback.rollingpolicy.max-file-size=1MB
 logging.logback.rollingpolicy.file-name-pattern=${LOG_FILE}.%d{yyyy-MM-dd}-%i.log
