--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,14 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/enjoytrip?serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=12341234
+spring.datasource.password=1234
 
 # mybatis
 mybatis.config-location=classpath:/config/mybatis-config.xml
 
 # logging
 logging.level.root=info
+logging.level.com.mycom.enjoytrip.user.dao.*=debug
 logging.level.com.mycom.enjoytrip.board.dao.*=debug
 logging.file.name=log/app.log
 logging.logback.rollingpolicy.max-file-size=1MB
