이전에 생성한 맵을 없앤다.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/enjoytrip?serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=12341234
+spring.datasource.password=1234
 
 # mybatis
 mybatis.config-location=classpath:/config/mybatis-config.xml
@@ -24,6 +24,6 @@ spring.servlet.multipart.max-file-size=200MB
 
 # app dependent configuration
 # ssafy && home path
-#app.fileupload.uploadPath=C:\\Users\\SSAFY\\Desktop\\repository\\ssafy_enjoytrip_team9\\src\\main\\resources\\static
-app.fileupload.uploadPath=C:\\Users\\kdh\\Desktop\\SF\\GIT_repo\\ssafy_enjoytrip_team9\\src\\main\\resources\\static
+app.fileupload.uploadPath=C:\\Users\\SSAFY\\Desktop\\repository\\ssafy_enjoytrip_team9\\src\\main\\resources\\static
+#app.fileupload.uploadPath=C:\\Users\\kdh\\Desktop\\SF\\GIT_repo\\ssafy_enjoytrip_team9\\src\\main\\resources\\static
 app.fileupload.uploadFolder=upload
